--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href='https://lemonprop.com/static/media/lemon_prop.c006b6e3.png' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,20 +11,23 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
   </style>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <title>LemonProp</title>
   <!--
       manifest.json provides metadata used when your web app is installed on a
 @@ -39,5 +42,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <header>
-    <div class="container">
+</head>
+<header>
+  <div class="container">
 
-    </div>
-  </header>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  </div>
+</header>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
 
 </html>
